codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_remapped_interrupt_hint.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"Working (0s • f12 to interrupt)                                                 "
