codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_with_queued_messages.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
# tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_with_queued_messages.snap
" ↳ first                                                                        "
" ↳ second                                                                       "
"   alt + ↑ edit                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
