codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_wrapped_long_waiting_header.snap
---
source: tui/src/status_indicator_widget.rs
assertion_line: 386
expression: terminal.backend()
---
"• Waiting for background terminal · "
"cargo test -p codex-core (0s)       "
"                                    "
"                                    "
